選択した画像を表示するActivity を作成

--- a/app/src/main/res/layout/activity_show_image_view.xml
+++ b/app/src/main/res/layout/activity_show_image_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:background="@android:color/black"
               android:layout_width="match_parent"
@@ -11,4 +12,11 @@
         android:layout_height="match_parent"
         android:scaleType="fitCenter"/>
 
-</LinearLayout>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_collapseMode="pin"
+        app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+</RelativeLayout>
